--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,28 @@ jobs:
           switches: -avz --delete
           path: ./dist/
           remote_path: /home/ubuntu/old-portfolio
-          remote_host: 47.130.48.189
-          remote_user: ubuntu
+          remote_host: ${{ secrets.REMOTE_HOST }}
+          remote_user: ${{ secrets.REMOTE_USER }}
+
           remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+       # SSH into the server and start the Vite app
+      - name: Start Vite App on Server
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << 'EOF'
+            # Navigate to the Vite app directory
+            cd /home/ubuntu/old-portfolio
+
+            # Install dependencies (if not already installed)
+            npm install
+
+            # Start the Vite app using PM2
+            pm2 start npm --name "old-portfolio" -- run start -- --port 5173
+
+            # You can also set up a system service if you'd prefer it to run persistently
+            # sudo systemctl start vite-app.service
+          EOF
+        env:
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
