--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,23 +39,23 @@ jobs:
           remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
        # SSH into the server and start the Vite app
-      - name: Setup SSH Key
-        run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/private_key.pem
-          chmod 600 /tmp/private_key.pem
+      #- name: Setup SSH Key
+      #  run: |
+       #   echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/private_key.pem
+        #  chmod 600 /tmp/private_key.pem
 
-      - name: SSH into the server
-        run: |
-          ssh -o StrictHostKeyChecking=no -i /tmp/private_key.pem ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << 'EOF'
-            cd /home/ubuntu/old-portfolio
+     # - name: SSH into the server
+       # run: |
+        #  ssh -o StrictHostKeyChecking=no -i /tmp/private_key.pem ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << 'EOF'
+         #   cd /home/ubuntu/old-portfolio
               # Install dependencies if needed
-            npm install
+         #   npm install
 
             # Start the Vite app using PM2
-            pm2 start npm --name "old-portfolio" -- run start -- --port 5173
-
-          EOF
-        env:
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+         #   pm2 start npm --name "old-portfolio" -- run start -- --port 5173
+##
+      #    EOF
+       # env:
+       #   REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        #  REMOTE_USER: ${{ secrets.REMOTE_USER }}
+         # SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
